# magic-mirror-backend

./: .gitignore  Dockerfile  README.md  noxfile.py  pyproject.toml  tmp_requirements.txt
.github/workflows/: tests.yaml
scripts/: falcon.sh  setup.sh
src/magic_mirror_backend/: __init__.py  a.py
src/magic_mirror_backend/api/: dummy.py  falcon_api.py  serving.py  streaming_api.py
src/magic_mirror_backend/chatbot/: chatbot.py  falcon_chatbot.py  llama_chatbot.py  llama_fast.py  llama_streaming.py  prompt_templates.py
src/magic_mirror_backend/transcription/: serving.py
src/magic_mirror_backend/transcription/utils/scripts/: inference.py
tests/: test_a.py
tests/api/: test_serving.py
tests/chatbot/: test_chatbot_base_class.py  test_falcon_chatbot.py  test_llama_chatbot.py  test_llama_fast.py  test_llama_streaming.py
